fix: Validating XML element names on unmarshalling (#615)